2008-01-24  Tor Lillqvist  <tml@novell.com>

	* e-icon-factory.c (e_icon_factory_init): Construct pathname under
	EVOLUTION_DATADIR at run-time because EVOLUTION_DATADIR is a
	function call on Windows.

2008-01-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #488213

	* e-icon-factory.h: (e_icon_factory_pixbuf_scale):
	* e-icon-factory.c: (e_icon_factory_pixbuf_scale):
	New global function for pixbuf scaling which speeds up scaling when
	HAVE_LIBGNOMEUI_GNOME_THUMBNAIL_H.
	* e-icon-factory.c: (load_icon):
	Use global function e_icon_factory_pixbuf_scale for scaling pixbufs.

2008-01-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #211353

	* Makefile.am:
	* e-util-labels.h:
	* e-util-labels.c: New files to work with labels.

2008-01-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #507363

	* e-cursor.c: (e_cursor_set):
	Also check if toplevel widget has non-NULL window property.

2007-12-14  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #211353

	* e-popup.h:
	* e-popup.c: (ep_build_tree):
	Toggles can be in inconsistent state now, and can also contain
	an image, which is a pointer to GtkImage widget.

2007-12-17  Srinivasa Ragavan  <sragavan@novell.com>

	* Makefile.am: Add e-logger.[ch] to compilation
	* e-error.c: (e_error_newv): Add primary/secondary text to the error 
	dialog to the gobject as data.
	* e-logger.[ch]: A new logger provision Evolution. 

2007-12-05  Srinivasa Ragavan  <sragavan@novell.com>

	* e-util.h: Fix a compiler warning

2007-12-05  Srinivasa Ragavan  <sragavan@novell.com>

	* e-util.c: (get_lock_filename), (e_file_lock_create),
	(e_file_lock_destroy), (e_file_lock_exists): Add utility functions for 
	startup-running lock create, check and delete.
	* e-util.h:

2007-12-04  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #500210

	* e-plugin.h:
	* e-plugin.c: (e_plugin_configure), (e_plugin_is_configurable),
	(epl_configure), (e_plugin_get_configure_widget),